fix: add --sun-misc-unsafe-memory-access=allow to suppress deprecation warnings
The --add-opens flags don't suppress the actual deprecation warnings from
JVM about sun.misc.Unsafe methods. This flag tells the JVM to allow the
deprecated memory access without printing warnings.